--- a/README
+++ b/README
@@ -1,4 +1,7 @@
-sync_core is a core framework to aide in syncing of remote data stores.
+cynq
+====
+
+cynq is a core framework to aide in syncing of remote data stores.
 
 You are able to sync 1 or many remote sources of data with a local source.  
 It takes care of bidirectional syncing for you so you don't have to worry
@@ -9,4 +12,8 @@ and then you're good to go.
 
 still more work to be done to make this completely client friendly, but it
 is viable as it exists today
+
+still lots more docs to add
+
+TODO: add docs so someone else can grok (or I can grok after a couple months off)
 
